configs: for swal-notifications

--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              "../node_modules/sweetalert2/dist/sweetalert2.css",
               "src/styles.css",
               "src/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../node_modules/sweetalert2/dist/sweetalert2.js"
+            ]
           },
           "configurations": {
             "production": {
