--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/router": "^6.1.0",
     "angular2-datatable": "^0.6.0",
     "core-js": "^2.5.4",
+    "ng2-sweetalert2": "0.0.8",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
+    "sweetalert2": "^7.26.10",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
