--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angular2-datatable": "^0.6.0",
+    "chart": "^0.1.2",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "ng2-sweetalert2": "0.0.8",
+    "randomcolor": "^0.5.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "sweetalert2": "^7.26.10",
