--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "@types/googlemaps": "^3.30.11",
     "angular-carousel": "^1.1.0",
+    "angular-token": "^6.0.1",
     "angular2-datatable": "^0.6.0",
+    "angular2-jwt": "^0.2.3",
     "chart": "^0.1.2",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
